--- a/index.html
+++ b/index.html
@@ -15,11 +15,7 @@
       <h1>Analyze your text in real-time.</h1>
     </header>
     <main>
-      <textarea
-        name="textarea-user-input"
-        id="textarea-user-input"
-        placeholder="Start typing here… (or paste your text)"
-      ></textarea>
+      <textarea name="user-input" id="user-input" placeholder="Start typing here… (or paste your text)"></textarea>
       <div class="criteria-options">Exclude Spaces Set Character Limit Approx. reading time: minutes</div>
 
       <div class="stats-container">
@@ -47,5 +43,6 @@
       <!-- Insert number -->
       <!-- Insert number -->
     </main>
+    <script src="script.js"></script>
   </body>
 </html>
