word count functionality

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
       <div class="stats-container">
         <div class="characters box">
           <span class="character-count">00</span>
-          <p>Total Characters <span class="excludedText">(no space)</span></p>
+          <p>Total Characters <span class="no-space-text hidden">(no space)</span></p>
         </div>
         <div class="words box">
           <span class="word-count">00</span>
