update character limit functionality

--- a/index.html
+++ b/index.html
@@ -22,8 +22,9 @@
           <label for="checkbox-space">Exclude Spaces</label>
         </div>
         <div class="criteria">
-          <input type="checkbox" id="checkbox-limit" />
-          <label for="checkbox-limit">Set Character Limit</label>
+          <input type="checkbox" id="checkbox-set-limit" />
+          <label for="checkbox-set-limit">Set Character Limit</label>
+          <input type="text" id="input-char-limit" class="input-char-limit hidden" />
         </div>
         <p>Approx. reading time: <span class="duration">0 minutes</span></p>
       </div>
