--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
         <div class="criteria">
           <input type="checkbox" id="checkbox-set-limit" />
           <label for="checkbox-set-limit">Set Character Limit</label>
-          <input type="text" id="input-char-limit" class="input-char-limit hidden" />
+          <input type="number" id="input-char-limit" class="input-char-limit" />
         </div>
         <p>Approx. reading time: <span class="duration">0 minutes</span></p>
       </div>
