set character functionality fix

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
       <h1>Analyze your text in real-time.</h1>
     </header>
     <main>
-      <textarea name="user-input" id="user-input" placeholder="Start typing here… (or paste your text)"></textarea>
+      <div class="input-container">
+        <textarea name="user-input" id="user-input" placeholder="Start typing here… (or paste your text)"></textarea>
+        <span><img src="assets/images/icon-info.svg" alt="exclamation icon" />THIS IS A TEST ELEMENT</span>
+      </div>
       <div class="criteria-options">
         <div class="criteria">
           <input type="checkbox" id="checkbox-space" />
