updating character limit functionality

--- a/index.html
+++ b/index.html
@@ -17,7 +17,10 @@
     <main>
       <div class="input-container">
         <textarea name="user-input" id="user-input" placeholder="Start typing here… (or paste your text)"></textarea>
-        <span><img src="assets/images/icon-info.svg" alt="exclamation icon" />THIS IS A TEST ELEMENT</span>
+        <div class="limit-warning-box">
+          <img src="assets/images/icon-info.svg" alt="exclamation icon" />
+          <span class="limit-warning-text">LIMIT WARNING TEXT PLACEHOLDER</span>
+        </div>
       </div>
       <div class="criteria-options">
         <div class="criteria">
