--- a/index.html
+++ b/index.html
@@ -62,6 +62,7 @@
         <canvas id="myChart"></canvas>
       </div>
     </main>
+    <script src="https://cdn.jsdelivr.net/npm/chartjs-plugin-datalabels"></script>
     <script src="script.js"></script>
   </body>
 </html>
