--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <title>Frontend Mentor | Character counter</title>
     <link rel="stylesheet" href="general.css" />
     <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="queries.css" />
   </head>
   <body>
     <header>
