dark mode functionality

--- a/index.html
+++ b/index.html
@@ -15,7 +15,10 @@
     <header>
       <nav class="navbar">
         <img src="./assets/images/logo-light-theme.svg" alt="character count app logo" />
-        <button class="btn-mode"><img src="./assets/images/icon-moon.svg" alt="moon icon" /></button>
+        <button class="btn-mode btn-mode-dark"><img src="./assets/images/icon-moon.svg" alt="moon icon" /></button>
+        <button class="btn-mode btn-mode-light btn-hidden">
+          <img src="./assets/images/icon-sun.svg" alt="sun icon" />
+        </button>
       </nav>
       <h1>Analyze your text in real-time.</h1>
     </header>
