dark mode toggle functionality

--- a/index.html
+++ b/index.html
@@ -14,9 +14,12 @@
   <body>
     <header>
       <nav class="navbar">
-        <img src="./assets/images/logo-light-theme.svg" alt="character count app logo" />
-        <button class="btn-mode btn-mode-dark"><img src="./assets/images/icon-moon.svg" alt="moon icon" /></button>
-        <button class="btn-mode btn-mode-light btn-hidden">
+        <img class="logo-theme" src="./assets/images/logo-light-theme.svg" alt="character count app logo" />
+
+        <button class="btn btn-moon visible-btn">
+          <img src="./assets/images/icon-moon.svg" alt="moon icon" />
+        </button>
+        <button class="btn btn-sun hidden-btn">
           <img src="./assets/images/icon-sun.svg" alt="sun icon" />
         </button>
       </nav>
